Import translations. DO NOT MERGE ANYWHERE
Auto-generated-cl: translation import
Change-Id: Ibdaf4e2f48546dcdeae112c352b8a76b11583436

--- a/res/values-am/strings.xml
+++ b/res/values-am/strings.xml
@@ -2262,8 +2262,7 @@
     <string name="audio_category_title" msgid="5283853679967605826">"ኦዲዮ"</string>
     <string name="general_category_title" msgid="6298579528716834157">"አጠቃላይ"</string>
     <string name="display_category_title" msgid="6638191682294461408">"አሳይ"</string>
-    <!-- no translation found for accessibility_color_and_motion_title (2323301706545305874) -->
-    <skip />
+    <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"ቀለም እና እንቅስቃሴ"</string>
     <string name="accessibility_turn_screen_darker_title" msgid="5986223133285858349">"ማያ ገጹን ወደ ጥቁር ይቀይሩ"</string>
     <string name="interaction_control_category_title" msgid="2696474616743882372">"የመስተጋብር መቆጣጠሪያዎች"</string>
     <string name="accessibility_tap_assistance_title" msgid="1058913033421048284">"የጊዜ መቆጣጠሪያዎች"</string>
@@ -2433,10 +2432,8 @@
     <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"የንክኪ ግብረመልስ"</string>
     <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>ን ይጠቀሙ"</string>
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>ን ክፈት"</string>
-    <!-- no translation found for accessibility_service_auto_added_qs_tooltips_content (4928746290220689428) -->
-    <skip />
-    <!-- no translation found for accessibility_service_qs_tooltips_content (3900536971101946314) -->
-    <skip />
+    <string name="accessibility_service_auto_added_qs_tooltips_content" msgid="4928746290220689428">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> ወደ ፈጣን ቅንብሮች ታክሏል በማናቸውም ጊዜ ለማብራት ወይም ለማጥፋት ወደታች ያሸራቱ"</string>
+    <string name="accessibility_service_qs_tooltips_content" msgid="3900536971101946314">"ፈጣን ቅንጅቶችን አርትዕ በማድረግ አቋራጭ ወደ <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> ማከል ይችላሉ።"</string>
     <string name="accessibility_quick_settings_tooltips_dismiss" msgid="1684723414081728584">"አሰናብት"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="default" msgid="3636710237139542212">"ቀለሞች በስልክዎ ላይ እንዴት እንደሚታዩ ያስተካክሉ"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="tablet" msgid="3702653229533336133">"ቀለሞች በጡባዊዎ ላይ እንዴት እንደሚታዩ ያስተካክሉ"</string>
@@ -3385,8 +3382,7 @@
     <string name="nfc_default_payment_workapp_confirmation_title" msgid="746921251872504687">"የስራ መተግበሪያ እንደ ነባሪ የክፍያ መተግበሪያ ይቀናበር?"</string>
     <string name="nfc_default_payment_workapp_confirmation_message_title" msgid="1533022606333010329">"የስራ መተግበሪያን በመጠቀም ክፍያ ለመፈጸም፦"</string>
     <string name="nfc_default_payment_workapp_confirmation_message_1" msgid="2917430119080702912">"የስራ መገለጫ መብራት አለበት።"</string>
-    <!-- no translation found for nfc_default_payment_workapp_confirmation_message_2 (8161184137833245628) -->
-    <skip />
+    <string name="nfc_default_payment_workapp_confirmation_message_2" msgid="8161184137833245628">"ካለዎት የእርስዎን የስራ ፒን፣ ስርዓተ ጥለት ወይም የይለፍ ቃል ማስገባት ይኖርብዎታል።"</string>
     <string name="nfc_payment_how_it_works" msgid="3658253265242662010">"እንዴት እንደሚሰራ"</string>
     <string name="nfc_payment_no_apps" msgid="6840001883471438798">"በመደብሮች ውስጥ በስልክዎ ይክፈሉ"</string>
     <string name="nfc_payment_default" msgid="3769788268378614608">"የክፍያ ነባሪ"</string>
@@ -5409,7 +5405,8 @@
     <string name="power_menu_long_press_for_assist_sensitivity_low_label" msgid="3430099983480845635">"አጭር"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_high_label" msgid="2059686170350829156">"ረጅም"</string>
     <string name="lockscreen_privacy_wallet_setting_toggle" msgid="4188327143734192000">"የኪስ ቦርሳን አሳይ"</string>
-    <string name="lockscreen_privacy_wallet_summary" msgid="5388868513484652431">"ከማያ ገጽ ቁልፍ እና ፈጣን ቅንብሮች ሆነው የኪስ ቦርሳ መድረሻን ይፍቀዱ"</string>
+    <!-- no translation found for lockscreen_privacy_wallet_summary (3984851951621168573) -->
+    <skip />
     <string name="lockscreen_privacy_qr_code_scanner_setting_toggle" msgid="4284186474146767523">"QR መቃኛን አሳይ"</string>
     <string name="lockscreen_privacy_qr_code_scanner_summary" msgid="6152471629901191089">"ከማያ ገጽ መቆለፊያ ሆነው ለQR መቃኛ መዳረሻ ይፍቀዱ"</string>
     <string name="lockscreen_privacy_controls_setting_toggle" msgid="7445725343949588613">"የመሣሪያ መቆጣጠሪያዎችን አሳይ"</string>
@@ -5607,14 +5604,10 @@
     <item msgid="588427840913221601">"የሂደት ሁኔታ"</item>
   </string-array>
     <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"አረጋግጥ"</string>
-    <!-- no translation found for dream_preview_button_title (6637456541851795952) -->
-    <skip />
-    <!-- no translation found for dream_picker_category (7726447836872744867) -->
-    <skip />
-    <!-- no translation found for dream_complications_toggle_title (4273232303027449163) -->
-    <skip />
-    <!-- no translation found for dream_complications_toggle_summary (8288590233196337078) -->
-    <skip />
+    <string name="dream_preview_button_title" msgid="6637456541851795952">"ቅድመ ዕይታ"</string>
+    <string name="dream_picker_category" msgid="7726447836872744867">"ማያ ገጽ ማቆያ ይምረጡ"</string>
+    <string name="dream_complications_toggle_title" msgid="4273232303027449163">"ተጨማሪ መረጃ አሳይ"</string>
+    <string name="dream_complications_toggle_summary" msgid="8288590233196337078">"በማያ ገጽ ማቆያ ላይ ጊዜ፣ ቀን እና የአየር ሁኔታን አሳይ"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"ተጨማሪ ቅንብሮች"</string>
     <string name="dream_setup_title" msgid="6356243920317789584">"የማያ ገጽ ቆጣቢዎን ያብጁ"</string>
     <string name="dream_setup_description" msgid="8881397422185278075">"መሣሪያዎ ጥቅም ላይ በማይውልበት ጊዜ በማያ ገጽዎ ላይ የሚያዩትን ይምረጡ።"</string>
@@ -5623,4 +5616,12 @@
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"የዴስክቶፕ ሁነታን በሁለተኛ ደረጃ ማሳያዎች ላይ ለማስገደድ ዳግም ማስነሳት ያስፈልጋል።"</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"ዳግም አስነሳ"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"በኋላ ዳግም አስነሳ"</string>
+    <!-- no translation found for bluetooth_details_spatial_audio_title (6183752635162309599) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_spatial_audio_summary (4125762902654875180) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_head_tracking_title (8021583493584244700) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_head_tracking_summary (2093665685644696866) -->
+    <skip />
 </resources>
