--- a/res/values-az/strings.xml
+++ b/res/values-az/strings.xml
@@ -2262,8 +2262,7 @@
     <string name="audio_category_title" msgid="5283853679967605826">"Audio"</string>
     <string name="general_category_title" msgid="6298579528716834157">"Ümumi"</string>
     <string name="display_category_title" msgid="6638191682294461408">"Ekran"</string>
-    <!-- no translation found for accessibility_color_and_motion_title (2323301706545305874) -->
-    <skip />
+    <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"Rəng və hərəkət"</string>
     <string name="accessibility_turn_screen_darker_title" msgid="5986223133285858349">"Ekranı qaraldın"</string>
     <string name="interaction_control_category_title" msgid="2696474616743882372">"Qarşılıqlı əlaqə nəzarəti"</string>
     <string name="accessibility_tap_assistance_title" msgid="1058913033421048284">"Zamanlama üzrə idarə elementləri"</string>
@@ -2433,10 +2432,8 @@
     <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"Toxunuş vibrasiyası"</string>
     <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> istifadə edin"</string>
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> tətbiqini açın"</string>
-    <!-- no translation found for accessibility_service_auto_added_qs_tooltips_content (4928746290220689428) -->
-    <skip />
-    <!-- no translation found for accessibility_service_qs_tooltips_content (3900536971101946314) -->
-    <skip />
+    <string name="accessibility_service_auto_added_qs_tooltips_content" msgid="4928746290220689428">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> Sürətli Ayarlara əlavə edilib. İstənilən vaxt aktiv və ya deaktiv etmək üçün aşağı sürüşdürün."</string>
+    <string name="accessibility_service_qs_tooltips_content" msgid="3900536971101946314">"Sürətli Ayarları redaktə edərək <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> tətbiqinə qısayol əlavə edə bilərsiniz"</string>
     <string name="accessibility_quick_settings_tooltips_dismiss" msgid="1684723414081728584">"Qapadın"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="default" msgid="3636710237139542212">"Telefonunuzda rənglərin necə göstərilməsini tənzimləyin"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="tablet" msgid="3702653229533336133">"Planşetinizdə rənglərin necə göstərilməsini tənzimləyin"</string>
@@ -3385,8 +3382,7 @@
     <string name="nfc_default_payment_workapp_confirmation_title" msgid="746921251872504687">"İş tətbiqi defolt ödəniş tətbiqi kimi ayarlansın?"</string>
     <string name="nfc_default_payment_workapp_confirmation_message_title" msgid="1533022606333010329">"İş tətbiqi ilə ödəniş etmək üçün:"</string>
     <string name="nfc_default_payment_workapp_confirmation_message_1" msgid="2917430119080702912">"iş profili aktiv edilməlidir."</string>
-    <!-- no translation found for nfc_default_payment_workapp_confirmation_message_2 (8161184137833245628) -->
-    <skip />
+    <string name="nfc_default_payment_workapp_confirmation_message_2" msgid="8161184137833245628">"varsa, iş PIN kodu, model və ya parolu daxil etməlisiniz."</string>
     <string name="nfc_payment_how_it_works" msgid="3658253265242662010">"İşləmə qaydası"</string>
     <string name="nfc_payment_no_apps" msgid="6840001883471438798">"Mağazada telefonunuzla ödəniş edin"</string>
     <string name="nfc_payment_default" msgid="3769788268378614608">"Defolt ödəniş"</string>
@@ -5409,7 +5405,7 @@
     <string name="power_menu_long_press_for_assist_sensitivity_low_label" msgid="3430099983480845635">"Qısa"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_high_label" msgid="2059686170350829156">"Uzun"</string>
     <string name="lockscreen_privacy_wallet_setting_toggle" msgid="4188327143734192000">"Pulqabını göstərin"</string>
-    <string name="lockscreen_privacy_wallet_summary" msgid="5388868513484652431">"Kilid ekranından və sürətli ayarlardan pulqabına girişə icazə verin"</string>
+    <string name="lockscreen_privacy_wallet_summary" msgid="3984851951621168573">"Kilid ekranından pulqabına girişə icazə verin"</string>
     <string name="lockscreen_privacy_qr_code_scanner_setting_toggle" msgid="4284186474146767523">"QR Skanerini göstərin"</string>
     <string name="lockscreen_privacy_qr_code_scanner_summary" msgid="6152471629901191089">"Kilid ekranından QR skanerinə girişə icazə verin"</string>
     <string name="lockscreen_privacy_controls_setting_toggle" msgid="7445725343949588613">"Cihaz nizamlayıcılarını göstərin"</string>
@@ -5607,14 +5603,10 @@
     <item msgid="588427840913221601">"Proses Vəziyyəti"</item>
   </string-array>
     <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"Təsdiq"</string>
-    <!-- no translation found for dream_preview_button_title (6637456541851795952) -->
-    <skip />
-    <!-- no translation found for dream_picker_category (7726447836872744867) -->
-    <skip />
-    <!-- no translation found for dream_complications_toggle_title (4273232303027449163) -->
-    <skip />
-    <!-- no translation found for dream_complications_toggle_summary (8288590233196337078) -->
-    <skip />
+    <string name="dream_preview_button_title" msgid="6637456541851795952">"Önizləmə"</string>
+    <string name="dream_picker_category" msgid="7726447836872744867">"Ekran qoruyucusu seçin"</string>
+    <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Əlavə məlumat göstərin"</string>
+    <string name="dream_complications_toggle_summary" msgid="8288590233196337078">"Ekran qoruyucuda vaxtı, tarixi və hava proqnozunu göstərin"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Digər ayarlar"</string>
     <string name="dream_setup_title" msgid="6356243920317789584">"Ekran qoruyucunuzu fərdiləşdirin"</string>
     <string name="dream_setup_description" msgid="8881397422185278075">"Cihazınız istifadə edilmədikdə ekranınızda nə görəcəyinizi seçin."</string>
@@ -5623,4 +5615,8 @@
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"İkinci dərəcəli displeylərdə masaüstü rejimini məcburi aktiv etmək üçün yenidən başlatma tələb olunur."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"İndi yenidən başladın"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Sonra yeniden başladın"</string>
+    <string name="bluetooth_details_spatial_audio_title" msgid="6183752635162309599">"3D audio effekti"</string>
+    <string name="bluetooth_details_spatial_audio_summary" msgid="4125762902654875180">"İmmersiv audio ətrafınızdan gələn kimi görünür. Yalnız bəzi medialar ilə işləyir."</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="8021583493584244700">"Audionu daha real edin"</string>
+    <string name="bluetooth_details_head_tracking_summary" msgid="2093665685644696866">"Audionun yerini dəyişdirin ki, daha təbii səslənsin."</string>
 </resources>
