--- a/res/values-lt/strings.xml
+++ b/res/values-lt/strings.xml
@@ -2310,8 +2310,7 @@
     <string name="audio_category_title" msgid="5283853679967605826">"Garsas"</string>
     <string name="general_category_title" msgid="6298579528716834157">"Bendrieji"</string>
     <string name="display_category_title" msgid="6638191682294461408">"Ekranas"</string>
-    <!-- no translation found for accessibility_color_and_motion_title (2323301706545305874) -->
-    <skip />
+    <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"Spalva ir judesys"</string>
     <string name="accessibility_turn_screen_darker_title" msgid="5986223133285858349">"Ekrano tamsinimas"</string>
     <string name="interaction_control_category_title" msgid="2696474616743882372">"Sąveikos valdikliai"</string>
     <string name="accessibility_tap_assistance_title" msgid="1058913033421048284">"Laiko valdikliai"</string>
@@ -2481,10 +2480,8 @@
     <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"Lietimo grįžtamasis ryšys"</string>
     <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"Naudoti „<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>“"</string>
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"Atidaryti „<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>“"</string>
-    <!-- no translation found for accessibility_service_auto_added_qs_tooltips_content (4928746290220689428) -->
-    <skip />
-    <!-- no translation found for accessibility_service_qs_tooltips_content (3900536971101946314) -->
-    <skip />
+    <string name="accessibility_service_auto_added_qs_tooltips_content" msgid="4928746290220689428">"Programa „<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>“ pridėta prie sparčiųjų nustatymų. Perbraukite žemyn, kad bet kuriuo metu įjungtumėte arba išjungtumėte."</string>
+    <string name="accessibility_service_qs_tooltips_content" msgid="3900536971101946314">"Galite pridėti programos „<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>“ šaukinį redaguodami sparčiuosius nustatymus"</string>
     <string name="accessibility_quick_settings_tooltips_dismiss" msgid="1684723414081728584">"Atmesti"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="default" msgid="3636710237139542212">"Koreguokite, kaip telefone rodomos spalvos"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="tablet" msgid="3702653229533336133">"Koreguokite, kaip planšetiniame kompiuteryje rodomos spalvos"</string>
@@ -3473,8 +3470,7 @@
     <string name="nfc_default_payment_workapp_confirmation_title" msgid="746921251872504687">"Nust. darbo progr. kaip numat. mok. progr.?"</string>
     <string name="nfc_default_payment_workapp_confirmation_message_title" msgid="1533022606333010329">"Jei norite sumokėti mokėjimų programa:"</string>
     <string name="nfc_default_payment_workapp_confirmation_message_1" msgid="2917430119080702912">"darbo profilis turi būti įjungtas."</string>
-    <!-- no translation found for nfc_default_payment_workapp_confirmation_message_2 (8161184137833245628) -->
-    <skip />
+    <string name="nfc_default_payment_workapp_confirmation_message_2" msgid="8161184137833245628">"turėsite įvesti darbo PIN kodą, atrakinimo piešinį ar slaptažodį, jei turite."</string>
     <string name="nfc_payment_how_it_works" msgid="3658253265242662010">"Kaip tai veikia"</string>
     <string name="nfc_payment_no_apps" msgid="6840001883471438798">"Mokėti naudojant telefoną parduotuvėse"</string>
     <string name="nfc_payment_default" msgid="3769788268378614608">"Numatytoji mokėjimo programa"</string>
@@ -5587,7 +5583,8 @@
     <string name="power_menu_long_press_for_assist_sensitivity_low_label" msgid="3430099983480845635">"Trumpai"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_high_label" msgid="2059686170350829156">"Ilgai"</string>
     <string name="lockscreen_privacy_wallet_setting_toggle" msgid="4188327143734192000">"Rodyti piniginę"</string>
-    <string name="lockscreen_privacy_wallet_summary" msgid="5388868513484652431">"Leiskite pasiekti piniginę iš užrakinimo ekrano ir sparčiųjų nustatymų"</string>
+    <!-- no translation found for lockscreen_privacy_wallet_summary (3984851951621168573) -->
+    <skip />
     <string name="lockscreen_privacy_qr_code_scanner_setting_toggle" msgid="4284186474146767523">"Rodyti QR kodų skaitytuvą"</string>
     <string name="lockscreen_privacy_qr_code_scanner_summary" msgid="6152471629901191089">"Leisti prieigą prie QR kodų skaitytuvo iš užrakinimo ekrano"</string>
     <string name="lockscreen_privacy_controls_setting_toggle" msgid="7445725343949588613">"Rodyti įrenginio valdiklius"</string>
@@ -5785,14 +5782,10 @@
     <item msgid="588427840913221601">"Apdorojimo būsena"</item>
   </string-array>
     <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"Patvirtinti"</string>
-    <!-- no translation found for dream_preview_button_title (6637456541851795952) -->
-    <skip />
-    <!-- no translation found for dream_picker_category (7726447836872744867) -->
-    <skip />
-    <!-- no translation found for dream_complications_toggle_title (4273232303027449163) -->
-    <skip />
-    <!-- no translation found for dream_complications_toggle_summary (8288590233196337078) -->
-    <skip />
+    <string name="dream_preview_button_title" msgid="6637456541851795952">"Peržiūrėti"</string>
+    <string name="dream_picker_category" msgid="7726447836872744867">"Ekrano užsklandos pasirinkimas"</string>
+    <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Papildomos informacijos rodymas"</string>
+    <string name="dream_complications_toggle_summary" msgid="8288590233196337078">"Pateikti laiką, datą ir orus ekrano užsklandoje"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Daugiau nustatymų"</string>
     <string name="dream_setup_title" msgid="6356243920317789584">"Ekrano užsklandos tinkinimas"</string>
     <string name="dream_setup_description" msgid="8881397422185278075">"Pasirinkite, kas bus rodoma ekrane, kai įrenginys nenaudojamas."</string>
@@ -5801,4 +5794,12 @@
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"Norint priverstinai įjungti darbalaukio režimą antriniuose ekranuose, būtina paleisti iš naujo."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"Paleisti iš naujo dabar"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Paleisti iš naujo vėliau"</string>
+    <!-- no translation found for bluetooth_details_spatial_audio_title (6183752635162309599) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_spatial_audio_summary (4125762902654875180) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_head_tracking_title (8021583493584244700) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_head_tracking_summary (2093665685644696866) -->
+    <skip />
 </resources>
