--- a/res/values-ml/strings.xml
+++ b/res/values-ml/strings.xml
@@ -2432,10 +2432,8 @@
     <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"സ്‌പർശന ഫീഡ്ബാക്ക്"</string>
     <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> ഉപയോഗിക്കുക"</string>
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> തുറക്കുക"</string>
-    <!-- no translation found for accessibility_service_auto_added_qs_tooltips_content (4928746290220689428) -->
-    <skip />
-    <!-- no translation found for accessibility_service_qs_tooltips_content (3900536971101946314) -->
-    <skip />
+    <string name="accessibility_service_auto_added_qs_tooltips_content" msgid="4928746290220689428">"ദ്രുത ക്രമീകരണത്തിലേക്ക് <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> ചേർത്തു. ഏതുസമയത്തും അത് ഓണാക്കുകയോ ഓഫാക്കുകയോ ചെയ്യാൻ താഴേക്ക് സ്വൈപ്പ് ചെയ്യുക."</string>
+    <string name="accessibility_service_qs_tooltips_content" msgid="3900536971101946314">"ദ്രുത ക്രമീകരണം എഡിറ്റ് ചെയ്തുകൊണ്ട് <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> ആപ്പിലേക്ക് കുറുക്കുവഴി ചേർക്കാം"</string>
     <string name="accessibility_quick_settings_tooltips_dismiss" msgid="1684723414081728584">"ഡിസ്‌മിസ് ചെയ്യുക"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="default" msgid="3636710237139542212">"നിങ്ങളുടെ ഫോണിൽ നിറങ്ങൾ എങ്ങനെ പ്രദർശിപ്പിക്കണമെന്ന് ക്രമീകരിക്കുക"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="tablet" msgid="3702653229533336133">"നിങ്ങളുടെ ടാബ്‌ലെറ്റിൽ നിറങ്ങൾ എങ്ങനെ പ്രദർശിപ്പിക്കണമെന്ന് ക്രമീകരിക്കുക"</string>
@@ -5407,7 +5405,8 @@
     <string name="power_menu_long_press_for_assist_sensitivity_low_label" msgid="3430099983480845635">"ദൈർഘ്യം കുറഞ്ഞത്"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_high_label" msgid="2059686170350829156">"ദൈർഘ്യമേറിയത്"</string>
     <string name="lockscreen_privacy_wallet_setting_toggle" msgid="4188327143734192000">"Wallet കാണിക്കുക"</string>
-    <string name="lockscreen_privacy_wallet_summary" msgid="5388868513484652431">"ലോക്ക് സ്‌ക്രീനിൽ നിന്നും ദ്രുത ക്രമീകരണത്തിൽ നിന്നും Wallet-ലേക്ക് ആക്‌സസ് അനുവദിക്കുക"</string>
+    <!-- no translation found for lockscreen_privacy_wallet_summary (3984851951621168573) -->
+    <skip />
     <string name="lockscreen_privacy_qr_code_scanner_setting_toggle" msgid="4284186474146767523">"QR സ്‌കാനർ കാണിക്കുക"</string>
     <string name="lockscreen_privacy_qr_code_scanner_summary" msgid="6152471629901191089">"ലോക്ക് സ്‌ക്രീനിൽ നിന്ന് QR സ്‌കാനറിലേക്കുള്ള ആക്‌സസ് അനുവദിക്കുക"</string>
     <string name="lockscreen_privacy_controls_setting_toggle" msgid="7445725343949588613">"ഉപകരണ നിയന്ത്രണങ്ങൾ കാണിക്കുക"</string>
@@ -5605,14 +5604,10 @@
     <item msgid="588427840913221601">"പ്രോസസിന്റെ നില"</item>
   </string-array>
     <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"സ്ഥിരീകരിക്കുക"</string>
-    <!-- no translation found for dream_preview_button_title (6637456541851795952) -->
-    <skip />
-    <!-- no translation found for dream_picker_category (7726447836872744867) -->
-    <skip />
-    <!-- no translation found for dream_complications_toggle_title (4273232303027449163) -->
-    <skip />
-    <!-- no translation found for dream_complications_toggle_summary (8288590233196337078) -->
-    <skip />
+    <string name="dream_preview_button_title" msgid="6637456541851795952">"പ്രിവ്യൂ ചെയ്യുക"</string>
+    <string name="dream_picker_category" msgid="7726447836872744867">"ഒരു സ്ക്രീൻ സേവർ തിരഞ്ഞെടുക്കുക"</string>
+    <string name="dream_complications_toggle_title" msgid="4273232303027449163">"അധിക വിവരങ്ങൾ കാണിക്കുക"</string>
+    <string name="dream_complications_toggle_summary" msgid="8288590233196337078">"സമയം, തീയതി, കാലാവസ്ഥ എന്നിവ സ്ക്രീൻ സേവറിൽ പ്രദർശിപ്പിക്കുന്നു"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"കൂടുതൽ ക്രമീകരണം"</string>
     <string name="dream_setup_title" msgid="6356243920317789584">"നിങ്ങളുടെ സ്ക്രീൻ സേവർ ഇഷ്‌ടാനുസൃതമാക്കുക"</string>
     <string name="dream_setup_description" msgid="8881397422185278075">"നിങ്ങളുടെ ഉപകരണം ഉപയോഗിക്കാത്തപ്പോൾ സ്ക്രീനിൽ എന്ത് കാണണമെന്ന് തിരഞ്ഞെടുക്കുക."</string>
@@ -5621,4 +5616,12 @@
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"ദ്വിതീയ ഡിസ്പ്ലേകളെ നിർബന്ധിതമായി ഡെസ്ക്ക്ടോപ്പ് മോഡിലാക്കാൻ റീബൂട്ട് ചെയ്യേണ്ടതുണ്ട്."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"ഇപ്പോൾ റീബൂട്ട് ചെയ്യുക"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"പിന്നീട് റീബൂട്ട് ചെയ്യുക"</string>
+    <!-- no translation found for bluetooth_details_spatial_audio_title (6183752635162309599) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_spatial_audio_summary (4125762902654875180) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_head_tracking_title (8021583493584244700) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_head_tracking_summary (2093665685644696866) -->
+    <skip />
 </resources>
