--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -2312,8 +2312,7 @@
     <string name="audio_category_title" msgid="5283853679967605826">"Zvuk"</string>
     <string name="general_category_title" msgid="6298579528716834157">"Všeobecné"</string>
     <string name="display_category_title" msgid="6638191682294461408">"Zobrazenie"</string>
-    <!-- no translation found for accessibility_color_and_motion_title (2323301706545305874) -->
-    <skip />
+    <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"Farba a pohyb"</string>
     <string name="accessibility_turn_screen_darker_title" msgid="5986223133285858349">"Stmavenie obrazovky"</string>
     <string name="interaction_control_category_title" msgid="2696474616743882372">"Doplnkové ovládanie"</string>
     <string name="accessibility_tap_assistance_title" msgid="1058913033421048284">"Ovládanie časovania"</string>
@@ -2483,10 +2482,8 @@
     <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"Odozva pri klepnutí"</string>
     <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"Použiť aplikáciu <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"Otvoriť <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
-    <!-- no translation found for accessibility_service_auto_added_qs_tooltips_content (4928746290220689428) -->
-    <skip />
-    <!-- no translation found for accessibility_service_qs_tooltips_content (3900536971101946314) -->
-    <skip />
+    <string name="accessibility_service_auto_added_qs_tooltips_content" msgid="4928746290220689428">"Aplikácia <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> bola pridaná do rýchlych nastavení. Potiahnutím nadol ju môžete kedykoľvek zapnúť alebo vypnúť."</string>
+    <string name="accessibility_service_qs_tooltips_content" msgid="3900536971101946314">"Úpravou rýchlych nastavení môžete pridať odkaz do aplikácie <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
     <string name="accessibility_quick_settings_tooltips_dismiss" msgid="1684723414081728584">"Zavrieť"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="default" msgid="3636710237139542212">"Upravte si zobrazovanie farieb v telefóne"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="tablet" msgid="3702653229533336133">"Upravte si zobrazovanie farieb v tablete"</string>
@@ -3475,8 +3472,7 @@
     <string name="nfc_default_payment_workapp_confirmation_title" msgid="746921251872504687">"Nastaviť pracovnú aplikáciu ako predvolenú platobnú aplikáciu?"</string>
     <string name="nfc_default_payment_workapp_confirmation_message_title" msgid="1533022606333010329">"Ak chcete zaplatiť pracovnou aplikáciou:"</string>
     <string name="nfc_default_payment_workapp_confirmation_message_1" msgid="2917430119080702912">"musí byť zapnutý pracovný profil;"</string>
-    <!-- no translation found for nfc_default_payment_workapp_confirmation_message_2 (8161184137833245628) -->
-    <skip />
+    <string name="nfc_default_payment_workapp_confirmation_message_2" msgid="8161184137833245628">"Ak v pracovnom účte používate kód PIN, vzor alebo heslo, budete ho musieť zadať."</string>
     <string name="nfc_payment_how_it_works" msgid="3658253265242662010">"Ako to funguje"</string>
     <string name="nfc_payment_no_apps" msgid="6840001883471438798">"Plaťte v obchodoch telefónom"</string>
     <string name="nfc_payment_default" msgid="3769788268378614608">"Predvolená platobná aplikácia"</string>
@@ -5589,7 +5585,8 @@
     <string name="power_menu_long_press_for_assist_sensitivity_low_label" msgid="3430099983480845635">"Krátke"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_high_label" msgid="2059686170350829156">"Dlhé"</string>
     <string name="lockscreen_privacy_wallet_setting_toggle" msgid="4188327143734192000">"Zobraziť peňaženku"</string>
-    <string name="lockscreen_privacy_wallet_summary" msgid="5388868513484652431">"Povoľte prístup k peňaženke z uzamknutej obrazovky a rýchlych nastavení"</string>
+    <!-- no translation found for lockscreen_privacy_wallet_summary (3984851951621168573) -->
+    <skip />
     <string name="lockscreen_privacy_qr_code_scanner_setting_toggle" msgid="4284186474146767523">"Zobrazovať skener QR kódov"</string>
     <string name="lockscreen_privacy_qr_code_scanner_summary" msgid="6152471629901191089">"Povoliť prístup ku skeneru QR kódov na uzamknutej obrazovke"</string>
     <string name="lockscreen_privacy_controls_setting_toggle" msgid="7445725343949588613">"Zobraziť ovládanie zariadení"</string>
@@ -5787,14 +5784,10 @@
     <item msgid="588427840913221601">"Stav procesov"</item>
   </string-array>
     <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"Potvrdiť"</string>
-    <!-- no translation found for dream_preview_button_title (6637456541851795952) -->
-    <skip />
-    <!-- no translation found for dream_picker_category (7726447836872744867) -->
-    <skip />
-    <!-- no translation found for dream_complications_toggle_title (4273232303027449163) -->
-    <skip />
-    <!-- no translation found for dream_complications_toggle_summary (8288590233196337078) -->
-    <skip />
+    <string name="dream_preview_button_title" msgid="6637456541851795952">"Zobraziť ukážku"</string>
+    <string name="dream_picker_category" msgid="7726447836872744867">"Výber šetriča obrazovky"</string>
+    <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Zobrazovať ďalšie informácie"</string>
+    <string name="dream_complications_toggle_summary" msgid="8288590233196337078">"Na šetriči obrazovky môžete zobrazovať čas, dátum a počasie"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Ďalšie nastavenia"</string>
     <string name="dream_setup_title" msgid="6356243920317789584">"Prispôsobenie šetriča obrazovky"</string>
     <string name="dream_setup_description" msgid="8881397422185278075">"Vyberte, čo sa bude zobrazovať na vašej obrazovke, keď nebudete používať zariadenie."</string>
@@ -5803,4 +5796,12 @@
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"Vynútenie režimu pracovnej plochy na sekundárnych obrazovkách vyžaduje reštartovanie."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"Reštartovať"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Reštartovať neskôr"</string>
+    <!-- no translation found for bluetooth_details_spatial_audio_title (6183752635162309599) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_spatial_audio_summary (4125762902654875180) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_head_tracking_title (8021583493584244700) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_head_tracking_summary (2093665685644696866) -->
+    <skip />
 </resources>
