--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -2262,8 +2262,7 @@
     <string name="audio_category_title" msgid="5283853679967605826">"Àudio"</string>
     <string name="general_category_title" msgid="6298579528716834157">"General"</string>
     <string name="display_category_title" msgid="6638191682294461408">"Pantalla"</string>
-    <!-- no translation found for accessibility_color_and_motion_title (2323301706545305874) -->
-    <skip />
+    <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"Color i moviment"</string>
     <string name="accessibility_turn_screen_darker_title" msgid="5986223133285858349">"Enfosqueix la pantalla"</string>
     <string name="interaction_control_category_title" msgid="2696474616743882372">"Controls d\'interacció"</string>
     <string name="accessibility_tap_assistance_title" msgid="1058913033421048284">"Controls de temps"</string>
@@ -2433,10 +2432,8 @@
     <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"Resposta tàctil"</string>
     <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"Utilitza <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"Obre <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
-    <!-- no translation found for accessibility_service_auto_added_qs_tooltips_content (4928746290220689428) -->
-    <skip />
-    <!-- no translation found for accessibility_service_qs_tooltips_content (3900536971101946314) -->
-    <skip />
+    <string name="accessibility_service_auto_added_qs_tooltips_content" msgid="4928746290220689428">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> s\'ha afegit a la configuració ràpida. Llisca cap avall per activar-la o desactivar-la en qualsevol moment."</string>
+    <string name="accessibility_service_qs_tooltips_content" msgid="3900536971101946314">"Pots afegir una drecera a <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> editant la configuració ràpida"</string>
     <string name="accessibility_quick_settings_tooltips_dismiss" msgid="1684723414081728584">"Ignora"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="default" msgid="3636710237139542212">"Ajusta com es mostren els colors al telèfon"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="tablet" msgid="3702653229533336133">"Ajusta com es mostren els colors a la tauleta"</string>
@@ -3385,8 +3382,7 @@
     <string name="nfc_default_payment_workapp_confirmation_title" msgid="746921251872504687">"Def. app treball com a app pagaments pred.?"</string>
     <string name="nfc_default_payment_workapp_confirmation_message_title" msgid="1533022606333010329">"Per pagar amb una aplicació de treball:"</string>
     <string name="nfc_default_payment_workapp_confirmation_message_1" msgid="2917430119080702912">"el perfil de treball ha d\'estar activat."</string>
-    <!-- no translation found for nfc_default_payment_workapp_confirmation_message_2 (8161184137833245628) -->
-    <skip />
+    <string name="nfc_default_payment_workapp_confirmation_message_2" msgid="8161184137833245628">"hauràs d\'introduir el PIN, el patró o la contrasenya del treball (si en tens)."</string>
     <string name="nfc_payment_how_it_works" msgid="3658253265242662010">"Com funciona"</string>
     <string name="nfc_payment_no_apps" msgid="6840001883471438798">"Paga a les botigues amb el telèfon"</string>
     <string name="nfc_payment_default" msgid="3769788268378614608">"Aplicació per pagar predeterminada"</string>
@@ -5409,7 +5405,8 @@
     <string name="power_menu_long_press_for_assist_sensitivity_low_label" msgid="3430099983480845635">"Curt"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_high_label" msgid="2059686170350829156">"Llarg"</string>
     <string name="lockscreen_privacy_wallet_setting_toggle" msgid="4188327143734192000">"Mostra la cartera"</string>
-    <string name="lockscreen_privacy_wallet_summary" msgid="5388868513484652431">"Permet l\'accés a la cartera des de la pantalla de bloqueig i la configuració ràpida"</string>
+    <!-- no translation found for lockscreen_privacy_wallet_summary (3984851951621168573) -->
+    <skip />
     <string name="lockscreen_privacy_qr_code_scanner_setting_toggle" msgid="4284186474146767523">"Mostra l\'escàner de codis QR"</string>
     <string name="lockscreen_privacy_qr_code_scanner_summary" msgid="6152471629901191089">"Permet l\'accés a l\'escàner de QR des de la pantalla de bloqueig"</string>
     <string name="lockscreen_privacy_controls_setting_toggle" msgid="7445725343949588613">"Mostra el control de dispositius"</string>
@@ -5607,14 +5604,10 @@
     <item msgid="588427840913221601">"Estat del procés"</item>
   </string-array>
     <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"Confirma"</string>
-    <!-- no translation found for dream_preview_button_title (6637456541851795952) -->
-    <skip />
-    <!-- no translation found for dream_picker_category (7726447836872744867) -->
-    <skip />
-    <!-- no translation found for dream_complications_toggle_title (4273232303027449163) -->
-    <skip />
-    <!-- no translation found for dream_complications_toggle_summary (8288590233196337078) -->
-    <skip />
+    <string name="dream_preview_button_title" msgid="6637456541851795952">"Previsualitza"</string>
+    <string name="dream_picker_category" msgid="7726447836872744867">"Tria un estalvi de pantalla"</string>
+    <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Mostra informació addicional"</string>
+    <string name="dream_complications_toggle_summary" msgid="8288590233196337078">"Mostra l\'hora, la data i el temps a l\'estalvi de pantalla"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Més opcions"</string>
     <string name="dream_setup_title" msgid="6356243920317789584">"Personalitza l\'estalvi de pantalla"</string>
     <string name="dream_setup_description" msgid="8881397422185278075">"Tria què vols veure a la pantalla quan el dispositiu no s\'estigui utilitzant."</string>
@@ -5623,4 +5616,12 @@
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"Cal reiniciar per forçar el mode d\'escriptori en pantalles secundàries."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"Reinicia ara"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Reinicia més tard"</string>
+    <!-- no translation found for bluetooth_details_spatial_audio_title (6183752635162309599) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_spatial_audio_summary (4125762902654875180) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_head_tracking_title (8021583493584244700) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_head_tracking_summary (2093665685644696866) -->
+    <skip />
 </resources>
