--- a/res/values-da/strings.xml
+++ b/res/values-da/strings.xml
@@ -1832,7 +1832,7 @@
     <string name="location_category_location_services" msgid="8163798686832434284">"Lokationstjenester"</string>
     <string name="location_title" msgid="5819154746934945021">"Min lokation"</string>
     <string name="managed_profile_location_switch_title" msgid="1265007506385460066">"Lokation for arbejdsprofil"</string>
-    <string name="location_app_level_permissions" msgid="907206607664629759">"Placeringstilladelser for apps"</string>
+    <string name="location_app_level_permissions" msgid="907206607664629759">"Adgangstilladelse til lokation for apps"</string>
     <string name="location_app_permission_summary_location_off" msgid="2711822936853500335">"Lokation er slået fra"</string>
     <plurals name="location_app_permission_summary_location_on" formatted="false" msgid="8286873148858526214">
       <item quantity="one"> <xliff:g id="PERMITTED_LOCATION_APP_COUNT_2">%1$d</xliff:g> ud af <xliff:g id="TOTAL_LOCATION_APP_COUNT_3">%2$d</xliff:g> app har adgang til din lokation</item>
@@ -2262,8 +2262,7 @@
     <string name="audio_category_title" msgid="5283853679967605826">"Lyd"</string>
     <string name="general_category_title" msgid="6298579528716834157">"Generelt"</string>
     <string name="display_category_title" msgid="6638191682294461408">"Visning"</string>
-    <!-- no translation found for accessibility_color_and_motion_title (2323301706545305874) -->
-    <skip />
+    <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"Farve og bevægelse"</string>
     <string name="accessibility_turn_screen_darker_title" msgid="5986223133285858349">"Gør skærmen mørkere"</string>
     <string name="interaction_control_category_title" msgid="2696474616743882372">"Interaktionsstyring"</string>
     <string name="accessibility_tap_assistance_title" msgid="1058913033421048284">"Tidsrelaterede styringselementer"</string>
@@ -2433,10 +2432,8 @@
     <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"Feedback ved tryk"</string>
     <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"Brug <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"Åbn <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
-    <!-- no translation found for accessibility_service_auto_added_qs_tooltips_content (4928746290220689428) -->
-    <skip />
-    <!-- no translation found for accessibility_service_qs_tooltips_content (3900536971101946314) -->
-    <skip />
+    <string name="accessibility_service_auto_added_qs_tooltips_content" msgid="4928746290220689428">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> er føjet til kvikmenuen. Du kan altid stryge nedad for at slå funktionen til eller fra."</string>
+    <string name="accessibility_service_qs_tooltips_content" msgid="3900536971101946314">"Du kan tilføje en genvej til <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> ved at redigere kvikmenuen"</string>
     <string name="accessibility_quick_settings_tooltips_dismiss" msgid="1684723414081728584">"Afvis"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="default" msgid="3636710237139542212">"Juster, hvordan farverne vises på din telefon"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="tablet" msgid="3702653229533336133">"Juster, hvordan farverne vises på din tablet"</string>
@@ -3385,8 +3382,7 @@
     <string name="nfc_default_payment_workapp_confirmation_title" msgid="746921251872504687">"Angiv arbejdsapp som standardapp til betaling?"</string>
     <string name="nfc_default_payment_workapp_confirmation_message_title" msgid="1533022606333010329">"Sådan betaler du med en arbejdsapp:"</string>
     <string name="nfc_default_payment_workapp_confirmation_message_1" msgid="2917430119080702912">"Arbejdsprofilen skal være aktiveret."</string>
-    <!-- no translation found for nfc_default_payment_workapp_confirmation_message_2 (8161184137833245628) -->
-    <skip />
+    <string name="nfc_default_payment_workapp_confirmation_message_2" msgid="8161184137833245628">"du skal angive pinkoden, mønsteret eller adgangskoden til din arbejdskonto."</string>
     <string name="nfc_payment_how_it_works" msgid="3658253265242662010">"Sådan fungerer det"</string>
     <string name="nfc_payment_no_apps" msgid="6840001883471438798">"Betal med din telefon i butikker"</string>
     <string name="nfc_payment_default" msgid="3769788268378614608">"Standardapp til betaling"</string>
@@ -5409,7 +5405,8 @@
     <string name="power_menu_long_press_for_assist_sensitivity_low_label" msgid="3430099983480845635">"Kort"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_high_label" msgid="2059686170350829156">"Langt"</string>
     <string name="lockscreen_privacy_wallet_setting_toggle" msgid="4188327143734192000">"Vis Wallet"</string>
-    <string name="lockscreen_privacy_wallet_summary" msgid="5388868513484652431">"Tillad adgang til Wallet fra låseskærmen og kvikmenuen"</string>
+    <!-- no translation found for lockscreen_privacy_wallet_summary (3984851951621168573) -->
+    <skip />
     <string name="lockscreen_privacy_qr_code_scanner_setting_toggle" msgid="4284186474146767523">"Vis QR-scanner"</string>
     <string name="lockscreen_privacy_qr_code_scanner_summary" msgid="6152471629901191089">"Tillad adgang til QR-kodescanneren via låseskærmen"</string>
     <string name="lockscreen_privacy_controls_setting_toggle" msgid="7445725343949588613">"Vis enhedsstyring"</string>
@@ -5607,14 +5604,10 @@
     <item msgid="588427840913221601">"Procestilstand"</item>
   </string-array>
     <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"Bekræft"</string>
-    <!-- no translation found for dream_preview_button_title (6637456541851795952) -->
-    <skip />
-    <!-- no translation found for dream_picker_category (7726447836872744867) -->
-    <skip />
-    <!-- no translation found for dream_complications_toggle_title (4273232303027449163) -->
-    <skip />
-    <!-- no translation found for dream_complications_toggle_summary (8288590233196337078) -->
-    <skip />
+    <string name="dream_preview_button_title" msgid="6637456541851795952">"Se forhåndsvisning"</string>
+    <string name="dream_picker_category" msgid="7726447836872744867">"Vælg en pauseskærm"</string>
+    <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Se yderligere oplysninger"</string>
+    <string name="dream_complications_toggle_summary" msgid="8288590233196337078">"Se klokkeslættet, datoen og vejret på pauseskærmen"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Flere indstillinger"</string>
     <string name="dream_setup_title" msgid="6356243920317789584">"Tilpas din pauseskærm"</string>
     <string name="dream_setup_description" msgid="8881397422185278075">"Vælg, hvad der skal vises på din skærm, når du ikke bruger din enhed."</string>
@@ -5623,4 +5616,12 @@
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"Du skal genstarte for at gennemtvinge aktivering af computertilstand på sekundære skærme."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"Genstart nu"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Genstart senere"</string>
+    <!-- no translation found for bluetooth_details_spatial_audio_title (6183752635162309599) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_spatial_audio_summary (4125762902654875180) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_head_tracking_title (8021583493584244700) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_head_tracking_summary (2093665685644696866) -->
+    <skip />
 </resources>
