--- a/res/values-en-rIN/strings.xml
+++ b/res/values-en-rIN/strings.xml
@@ -2432,10 +2432,8 @@
     <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"Touch feedback"</string>
     <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"Use <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"Open <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
-    <!-- no translation found for accessibility_service_auto_added_qs_tooltips_content (4928746290220689428) -->
-    <skip />
-    <!-- no translation found for accessibility_service_qs_tooltips_content (3900536971101946314) -->
-    <skip />
+    <string name="accessibility_service_auto_added_qs_tooltips_content" msgid="4928746290220689428">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> added to Quick Settings. Swipe down to turn it on or off at any time."</string>
+    <string name="accessibility_service_qs_tooltips_content" msgid="3900536971101946314">"You can add a shortcut to <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> by editing Quick Settings"</string>
     <string name="accessibility_quick_settings_tooltips_dismiss" msgid="1684723414081728584">"Dismiss"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="default" msgid="3636710237139542212">"Adjust how colours display on your phone"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="tablet" msgid="3702653229533336133">"Adjust how colours display on your tablet"</string>
@@ -5407,7 +5405,7 @@
     <string name="power_menu_long_press_for_assist_sensitivity_low_label" msgid="3430099983480845635">"Short"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_high_label" msgid="2059686170350829156">"Long"</string>
     <string name="lockscreen_privacy_wallet_setting_toggle" msgid="4188327143734192000">"Show wallet"</string>
-    <string name="lockscreen_privacy_wallet_summary" msgid="5388868513484652431">"Allow access to wallet from lock screen and Quick Settings"</string>
+    <string name="lockscreen_privacy_wallet_summary" msgid="3984851951621168573">"Allow access to wallet from lock screen"</string>
     <string name="lockscreen_privacy_qr_code_scanner_setting_toggle" msgid="4284186474146767523">"Show QR scanner"</string>
     <string name="lockscreen_privacy_qr_code_scanner_summary" msgid="6152471629901191089">"Allow access to QR scanner from lock screen"</string>
     <string name="lockscreen_privacy_controls_setting_toggle" msgid="7445725343949588613">"Show device controls"</string>
@@ -5605,14 +5603,10 @@
     <item msgid="588427840913221601">"Process state"</item>
   </string-array>
     <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"Confirm"</string>
-    <!-- no translation found for dream_preview_button_title (6637456541851795952) -->
-    <skip />
-    <!-- no translation found for dream_picker_category (7726447836872744867) -->
-    <skip />
-    <!-- no translation found for dream_complications_toggle_title (4273232303027449163) -->
-    <skip />
-    <!-- no translation found for dream_complications_toggle_summary (8288590233196337078) -->
-    <skip />
+    <string name="dream_preview_button_title" msgid="6637456541851795952">"Preview"</string>
+    <string name="dream_picker_category" msgid="7726447836872744867">"Choose a screen saver"</string>
+    <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Show additional information"</string>
+    <string name="dream_complications_toggle_summary" msgid="8288590233196337078">"Display time, date and weather on the screen saver"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"More settings"</string>
     <string name="dream_setup_title" msgid="6356243920317789584">"Customise your screen saver"</string>
     <string name="dream_setup_description" msgid="8881397422185278075">"Choose what you’ll see on your screen when your device is not in use."</string>
@@ -5621,4 +5615,8 @@
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"A reboot is required to force desktop mode on secondary displays."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"Reboot now"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Reboot later"</string>
+    <string name="bluetooth_details_spatial_audio_title" msgid="6183752635162309599">"Spatial audio"</string>
+    <string name="bluetooth_details_spatial_audio_summary" msgid="4125762902654875180">"Immersive audio seems like it\'s coming from all around you. Only works with some media."</string>
+    <string name="bluetooth_details_head_tracking_title" msgid="8021583493584244700">"Make audio more realistic"</string>
+    <string name="bluetooth_details_head_tracking_summary" msgid="2093665685644696866">"Shift positioning of audio so that it sounds more natural."</string>
 </resources>
