--- a/res/values-es-rUS/strings.xml
+++ b/res/values-es-rUS/strings.xml
@@ -2264,8 +2264,7 @@
     <string name="audio_category_title" msgid="5283853679967605826">"Audio"</string>
     <string name="general_category_title" msgid="6298579528716834157">"General"</string>
     <string name="display_category_title" msgid="6638191682294461408">"Pantalla"</string>
-    <!-- no translation found for accessibility_color_and_motion_title (2323301706545305874) -->
-    <skip />
+    <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"Color y movimiento"</string>
     <string name="accessibility_turn_screen_darker_title" msgid="5986223133285858349">"Oscurecer la pantalla"</string>
     <string name="interaction_control_category_title" msgid="2696474616743882372">"Controles de interacción"</string>
     <string name="accessibility_tap_assistance_title" msgid="1058913033421048284">"Controles de tiempo"</string>
@@ -2435,10 +2434,8 @@
     <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"Respuesta táctil"</string>
     <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"Usar <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"Abrir <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
-    <!-- no translation found for accessibility_service_auto_added_qs_tooltips_content (4928746290220689428) -->
-    <skip />
-    <!-- no translation found for accessibility_service_qs_tooltips_content (3900536971101946314) -->
-    <skip />
+    <string name="accessibility_service_auto_added_qs_tooltips_content" msgid="4928746290220689428">"Se agregó <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> a la Configuración rápida. Desliza hacia abajo para activarla o desactivarla en cualquier momento."</string>
+    <string name="accessibility_service_qs_tooltips_content" msgid="3900536971101946314">"Puedes agregar un acceso directo a <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> editando la Configuración rápida"</string>
     <string name="accessibility_quick_settings_tooltips_dismiss" msgid="1684723414081728584">"Descartar"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="default" msgid="3636710237139542212">"Ajusta cómo se muestran los colores en tu teléfono"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="tablet" msgid="3702653229533336133">"Ajusta cómo se muestran los colores en tu tablet"</string>
@@ -3387,8 +3384,7 @@
     <string name="nfc_default_payment_workapp_confirmation_title" msgid="746921251872504687">"¿App de trabajo como de pagos predet.?"</string>
     <string name="nfc_default_payment_workapp_confirmation_message_title" msgid="1533022606333010329">"Para hacer pagos con una app de trabajo:"</string>
     <string name="nfc_default_payment_workapp_confirmation_message_1" msgid="2917430119080702912">"El perfil de trabajo debe estar activado."</string>
-    <!-- no translation found for nfc_default_payment_workapp_confirmation_message_2 (8161184137833245628) -->
-    <skip />
+    <string name="nfc_default_payment_workapp_confirmation_message_2" msgid="8161184137833245628">"Deberás ingresar tu PIN, patrón o contraseña de trabajo, si tienes uno."</string>
     <string name="nfc_payment_how_it_works" msgid="3658253265242662010">"Cómo funciona"</string>
     <string name="nfc_payment_no_apps" msgid="6840001883471438798">"Paga en las tiendas con tu teléfono"</string>
     <string name="nfc_payment_default" msgid="3769788268378614608">"App de pagos predeterminada"</string>
@@ -5411,7 +5407,8 @@
     <string name="power_menu_long_press_for_assist_sensitivity_low_label" msgid="3430099983480845635">"Corta"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_high_label" msgid="2059686170350829156">"Larga"</string>
     <string name="lockscreen_privacy_wallet_setting_toggle" msgid="4188327143734192000">"Mostrar billetera"</string>
-    <string name="lockscreen_privacy_wallet_summary" msgid="5388868513484652431">"Permite el acceso a la billetera desde la pantalla de bloqueo y la Configuración rápida"</string>
+    <!-- no translation found for lockscreen_privacy_wallet_summary (3984851951621168573) -->
+    <skip />
     <string name="lockscreen_privacy_qr_code_scanner_setting_toggle" msgid="4284186474146767523">"Mostrar escáner de QR"</string>
     <string name="lockscreen_privacy_qr_code_scanner_summary" msgid="6152471629901191089">"Permitir el acceso al escáner de QR desde la pantalla de bloqueo"</string>
     <string name="lockscreen_privacy_controls_setting_toggle" msgid="7445725343949588613">"Mostrar controles del dispositivo"</string>
@@ -5609,14 +5606,10 @@
     <item msgid="588427840913221601">"Estado del proceso"</item>
   </string-array>
     <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"Confirmar"</string>
-    <!-- no translation found for dream_preview_button_title (6637456541851795952) -->
-    <skip />
-    <!-- no translation found for dream_picker_category (7726447836872744867) -->
-    <skip />
-    <!-- no translation found for dream_complications_toggle_title (4273232303027449163) -->
-    <skip />
-    <!-- no translation found for dream_complications_toggle_summary (8288590233196337078) -->
-    <skip />
+    <string name="dream_preview_button_title" msgid="6637456541851795952">"Vista previa"</string>
+    <string name="dream_picker_category" msgid="7726447836872744867">"Selecciona un protector de pantalla"</string>
+    <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Mostrar información adicional"</string>
+    <string name="dream_complications_toggle_summary" msgid="8288590233196337078">"Mostrar la hora, la fecha y el tiempo en el protector de pantalla"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Más parámetros de configuración"</string>
     <string name="dream_setup_title" msgid="6356243920317789584">"Personaliza el protector de pantalla"</string>
     <string name="dream_setup_description" msgid="8881397422185278075">"Elige lo que quieres ver en la pantalla cuando el dispositivo no se usa."</string>
@@ -5625,4 +5618,12 @@
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"Se debe reiniciar para forzar el modo de computadora en las pantallas secundarias."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"Reiniciar ahora"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Reiniciar más adelante"</string>
+    <!-- no translation found for bluetooth_details_spatial_audio_title (6183752635162309599) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_spatial_audio_summary (4125762902654875180) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_head_tracking_title (8021583493584244700) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_head_tracking_summary (2093665685644696866) -->
+    <skip />
 </resources>
