--- a/res/values-gu/strings.xml
+++ b/res/values-gu/strings.xml
@@ -2432,10 +2432,8 @@
     <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"પ્રતિસાદને ટચ કરો"</string>
     <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>નો ઉપયોગ કરો"</string>
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> ખોલો"</string>
-    <!-- no translation found for accessibility_service_auto_added_qs_tooltips_content (4928746290220689428) -->
-    <skip />
-    <!-- no translation found for accessibility_service_qs_tooltips_content (3900536971101946314) -->
-    <skip />
+    <string name="accessibility_service_auto_added_qs_tooltips_content" msgid="4928746290220689428">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>ને ઝડપી સેટિંગમાં ઉમેરી. તેને કોઈપણ સમયે ચાલુ અથવા બંધ કરવા માટે, નીચેની તરફ સ્વાઇપ કરો."</string>
+    <string name="accessibility_service_qs_tooltips_content" msgid="3900536971101946314">"ઝડપી સેટિંગમાં ફેરફાર કરીને, તમે <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>માં કોઈ શૉર્ટકટ ઉમેરી શકો છો"</string>
     <string name="accessibility_quick_settings_tooltips_dismiss" msgid="1684723414081728584">"છોડી દો"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="default" msgid="3636710237139542212">"તમારા ફોન પર રંગો કેવી રીતે બતાવવામાં આવે તેની ગોઠવણી કરો"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="tablet" msgid="3702653229533336133">"તમારા ટૅબ્લેટ પર રંગો કેવી રીતે બતાવવામાં આવે તેની ગોઠવણી કરો"</string>
@@ -5407,7 +5405,8 @@
     <string name="power_menu_long_press_for_assist_sensitivity_low_label" msgid="3430099983480845635">"નાનો"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_high_label" msgid="2059686170350829156">"લાંબો"</string>
     <string name="lockscreen_privacy_wallet_setting_toggle" msgid="4188327143734192000">"વૉલેટ બતાવો"</string>
-    <string name="lockscreen_privacy_wallet_summary" msgid="5388868513484652431">"લૉક સ્ક્રીન અને ઝડપી સેટિંગથી વૉલેટ ઍક્સેસ કરવાની મંજૂરી આપો"</string>
+    <!-- no translation found for lockscreen_privacy_wallet_summary (3984851951621168573) -->
+    <skip />
     <string name="lockscreen_privacy_qr_code_scanner_setting_toggle" msgid="4284186474146767523">"QR સ્કૅનર બતાવો"</string>
     <string name="lockscreen_privacy_qr_code_scanner_summary" msgid="6152471629901191089">"લૉક સ્ક્રીનમાંથી QR સ્કૅનરના ઍક્સેસની મંજૂરી આપો"</string>
     <string name="lockscreen_privacy_controls_setting_toggle" msgid="7445725343949588613">"ડિવાઇસનાં નિયંત્રણો બતાવો"</string>
@@ -5605,14 +5604,10 @@
     <item msgid="588427840913221601">"પ્રક્રિયાનું સ્ટેટસ"</item>
   </string-array>
     <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"કન્ફર્મ કરો"</string>
-    <!-- no translation found for dream_preview_button_title (6637456541851795952) -->
-    <skip />
-    <!-- no translation found for dream_picker_category (7726447836872744867) -->
-    <skip />
-    <!-- no translation found for dream_complications_toggle_title (4273232303027449163) -->
-    <skip />
-    <!-- no translation found for dream_complications_toggle_summary (8288590233196337078) -->
-    <skip />
+    <string name="dream_preview_button_title" msgid="6637456541851795952">"પ્રીવ્યૂ કરો"</string>
+    <string name="dream_picker_category" msgid="7726447836872744867">"કોઈ સ્ક્રીન સેવર પસંદ કરો"</string>
+    <string name="dream_complications_toggle_title" msgid="4273232303027449163">"વધારાની માહિતી બતાવો"</string>
+    <string name="dream_complications_toggle_summary" msgid="8288590233196337078">"સ્ક્રીન સેવરમાં સમય, તારીખ અને હવામાન બતાવો"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"વધુ સેટિંગ"</string>
     <string name="dream_setup_title" msgid="6356243920317789584">"તમારા સ્ક્રીનસેવરને કસ્ટમાઇઝ કરો"</string>
     <string name="dream_setup_description" msgid="8881397422185278075">"જ્યારે તમારું ડિવાઇસ ઉપયોગમાં ન હોય, ત્યારે તમે તમારી સ્ક્રીન પર શું જોશો તે પસંદ કરો."</string>
@@ -5621,4 +5616,12 @@
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"ગૌણ ડિસ્પ્લે પર ડેસ્કટૉપ મોડ લાગુ થવાની ફરજ પાડવા માટે રીબૂટ કરવું જરૂરી છે."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"હમણાં રીબૂટ કરો"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"પછીથી રીબૂટ કરો"</string>
+    <!-- no translation found for bluetooth_details_spatial_audio_title (6183752635162309599) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_spatial_audio_summary (4125762902654875180) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_head_tracking_title (8021583493584244700) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_head_tracking_summary (2093665685644696866) -->
+    <skip />
 </resources>
