--- a/res/values-ro/strings.xml
+++ b/res/values-ro/strings.xml
@@ -2288,8 +2288,7 @@
     <string name="audio_category_title" msgid="5283853679967605826">"Audio"</string>
     <string name="general_category_title" msgid="6298579528716834157">"General"</string>
     <string name="display_category_title" msgid="6638191682294461408">"Afișaj"</string>
-    <!-- no translation found for accessibility_color_and_motion_title (2323301706545305874) -->
-    <skip />
+    <string name="accessibility_color_and_motion_title" msgid="2323301706545305874">"Culoare și mișcare"</string>
     <string name="accessibility_turn_screen_darker_title" msgid="5986223133285858349">"Reduceți luminozitatea ecranului"</string>
     <string name="interaction_control_category_title" msgid="2696474616743882372">"Comenzi pentru interacțiune"</string>
     <string name="accessibility_tap_assistance_title" msgid="1058913033421048284">"Comenzi de sincronizare"</string>
@@ -2459,10 +2458,8 @@
     <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"Feedback la atingere"</string>
     <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"Folosiți <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"Deschideți <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
-    <!-- no translation found for accessibility_service_auto_added_qs_tooltips_content (4928746290220689428) -->
-    <skip />
-    <!-- no translation found for accessibility_service_qs_tooltips_content (3900536971101946314) -->
-    <skip />
+    <string name="accessibility_service_auto_added_qs_tooltips_content" msgid="4928746290220689428">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> s-a adăugat în Setări rapide. Glisați în jos oricând pentru a activa sau a dezactiva."</string>
+    <string name="accessibility_service_qs_tooltips_content" msgid="3900536971101946314">"Puteți adăuga o comandă rapidă la <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> dacă editați setările rapide"</string>
     <string name="accessibility_quick_settings_tooltips_dismiss" msgid="1684723414081728584">"Închideți"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="default" msgid="3636710237139542212">"Ajustați modul în care se afișează culorile pe telefon"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="tablet" msgid="3702653229533336133">"Ajustați modul în care se afișează culorile pe tabletă"</string>
@@ -3431,8 +3428,7 @@
     <string name="nfc_default_payment_workapp_confirmation_title" msgid="746921251872504687">"Setați aplicația pentru lucru ca aplicație de plată prestabilită?"</string>
     <string name="nfc_default_payment_workapp_confirmation_message_title" msgid="1533022606333010329">"Ca să plătiți cu o aplicație de plată:"</string>
     <string name="nfc_default_payment_workapp_confirmation_message_1" msgid="2917430119080702912">"profilul de serviciu trebuie să fie activat."</string>
-    <!-- no translation found for nfc_default_payment_workapp_confirmation_message_2 (8161184137833245628) -->
-    <skip />
+    <string name="nfc_default_payment_workapp_confirmation_message_2" msgid="8161184137833245628">"Introduceți PIN-ul, modelul sau parola pentru profilul de serviciu, dacă există."</string>
     <string name="nfc_payment_how_it_works" msgid="3658253265242662010">"Cum funcționează"</string>
     <string name="nfc_payment_no_apps" msgid="6840001883471438798">"Plătiți cu telefonul în magazine"</string>
     <string name="nfc_payment_default" msgid="3769788268378614608">"Aplicația de plată prestabilită"</string>
@@ -5500,7 +5496,8 @@
     <string name="power_menu_long_press_for_assist_sensitivity_low_label" msgid="3430099983480845635">"Scurtă"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_high_label" msgid="2059686170350829156">"Lungă"</string>
     <string name="lockscreen_privacy_wallet_setting_toggle" msgid="4188327143734192000">"Afișați Wallet"</string>
-    <string name="lockscreen_privacy_wallet_summary" msgid="5388868513484652431">"Permiteți accesul la Wallet din ecranul de blocare și setările rapide"</string>
+    <!-- no translation found for lockscreen_privacy_wallet_summary (3984851951621168573) -->
+    <skip />
     <string name="lockscreen_privacy_qr_code_scanner_setting_toggle" msgid="4284186474146767523">"Afișați scanerul de coduri QR"</string>
     <string name="lockscreen_privacy_qr_code_scanner_summary" msgid="6152471629901191089">"Permiteți accesul la scanerul de coduri QR de pe ecranul de blocare"</string>
     <string name="lockscreen_privacy_controls_setting_toggle" msgid="7445725343949588613">"Afișați comenzile dispozitivului"</string>
@@ -5698,14 +5695,10 @@
     <item msgid="588427840913221601">"Starea procesului"</item>
   </string-array>
     <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"Confirmați"</string>
-    <!-- no translation found for dream_preview_button_title (6637456541851795952) -->
-    <skip />
-    <!-- no translation found for dream_picker_category (7726447836872744867) -->
-    <skip />
-    <!-- no translation found for dream_complications_toggle_title (4273232303027449163) -->
-    <skip />
-    <!-- no translation found for dream_complications_toggle_summary (8288590233196337078) -->
-    <skip />
+    <string name="dream_preview_button_title" msgid="6637456541851795952">"Previzualizați"</string>
+    <string name="dream_picker_category" msgid="7726447836872744867">"Alegeți un screensaver"</string>
+    <string name="dream_complications_toggle_title" msgid="4273232303027449163">"Afișați informații suplimentare"</string>
+    <string name="dream_complications_toggle_summary" msgid="8288590233196337078">"Afișați data, ora și condițiile meteo pe screensaver"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"Mai multe setări"</string>
     <string name="dream_setup_title" msgid="6356243920317789584">"Personalizați screensaverul"</string>
     <string name="dream_setup_description" msgid="8881397422185278075">"Alegeți ce veți vedea pe ecran când dispozitivul nu este în uz."</string>
@@ -5714,4 +5707,12 @@
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"Este nevoie de o repornire pentru a impune modul computer pe ecranele secundare."</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"Reporniți acum"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"Reporniți mai târziu"</string>
+    <!-- no translation found for bluetooth_details_spatial_audio_title (6183752635162309599) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_spatial_audio_summary (4125762902654875180) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_head_tracking_title (8021583493584244700) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_head_tracking_summary (2093665685644696866) -->
+    <skip />
 </resources>
