--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -2432,10 +2432,8 @@
     <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"ٹچ تاثرات"</string>
     <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> استعمال کریں"</string>
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> کھولیں"</string>
-    <!-- no translation found for accessibility_service_auto_added_qs_tooltips_content (4928746290220689428) -->
-    <skip />
-    <!-- no translation found for accessibility_service_qs_tooltips_content (3900536971101946314) -->
-    <skip />
+    <string name="accessibility_service_auto_added_qs_tooltips_content" msgid="4928746290220689428">"فوری ترتیبات میں <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> کو شامل کیا گیا۔ اسے کسی بھی وقت آن یا آف کرنے کے لیے نیچے سوائپ کریں۔"</string>
+    <string name="accessibility_service_qs_tooltips_content" msgid="3900536971101946314">"آپ فوری ترتیبات میں ترمیم کر کے <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> میں ایک شارٹ کٹ شامل کر سکتے ہیں"</string>
     <string name="accessibility_quick_settings_tooltips_dismiss" msgid="1684723414081728584">"برخاست کریں"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="default" msgid="3636710237139542212">"آپ کے فون پر رنگوں کے ڈسپلے ہونے کے طریقے کو ایڈجسٹ کریں"</string>
     <string name="accessibility_daltonizer_about_intro_text" product="tablet" msgid="3702653229533336133">"آپ کے ٹیبلیٹ پر رنگوں کے ڈسپلے ہونے کے طریقے کو ایڈجسٹ کریں"</string>
@@ -5407,7 +5405,8 @@
     <string name="power_menu_long_press_for_assist_sensitivity_low_label" msgid="3430099983480845635">"مختصر ویڈیو"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_high_label" msgid="2059686170350829156">"طویل"</string>
     <string name="lockscreen_privacy_wallet_setting_toggle" msgid="4188327143734192000">"والٹ دکھائیں"</string>
-    <string name="lockscreen_privacy_wallet_summary" msgid="5388868513484652431">"مقفل اسکرین اور فوری ترتیبات سے بٹوے تک رسائی کی اجازت دیں"</string>
+    <!-- no translation found for lockscreen_privacy_wallet_summary (3984851951621168573) -->
+    <skip />
     <string name="lockscreen_privacy_qr_code_scanner_setting_toggle" msgid="4284186474146767523">"‏QR اسکینر دکھائیں"</string>
     <string name="lockscreen_privacy_qr_code_scanner_summary" msgid="6152471629901191089">"‏مقفل اسکرین سے QR اسکینر تک رسائی کی اجازت دیں"</string>
     <string name="lockscreen_privacy_controls_setting_toggle" msgid="7445725343949588613">"آلے کے کنٹرولز دکھائیں"</string>
@@ -5605,14 +5604,10 @@
     <item msgid="588427840913221601">"پروسیس اسٹیٹ"</item>
   </string-array>
     <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"تصدیق کریں"</string>
-    <!-- no translation found for dream_preview_button_title (6637456541851795952) -->
-    <skip />
-    <!-- no translation found for dream_picker_category (7726447836872744867) -->
-    <skip />
-    <!-- no translation found for dream_complications_toggle_title (4273232303027449163) -->
-    <skip />
-    <!-- no translation found for dream_complications_toggle_summary (8288590233196337078) -->
-    <skip />
+    <string name="dream_preview_button_title" msgid="6637456541851795952">"پیش منظر"</string>
+    <string name="dream_picker_category" msgid="7726447836872744867">"اسکرین سیور منتخب کریں"</string>
+    <string name="dream_complications_toggle_title" msgid="4273232303027449163">"اضافی معلومات دکھائیں"</string>
+    <string name="dream_complications_toggle_summary" msgid="8288590233196337078">"اسکرین سیور پر وقت، تاریخ اور موسم دکھائیں"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"مزید ترتیبات"</string>
     <string name="dream_setup_title" msgid="6356243920317789584">"اپنے اسکرین سیور کو حسب ضرورت بنائیں"</string>
     <string name="dream_setup_description" msgid="8881397422185278075">"آپ کا آلہ استعمال میں نہ ہونے پر منتخب کریں کہ آپ اپنی اسکرین پر کیا دیکھیں گے۔"</string>
@@ -5621,4 +5616,12 @@
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"سیکنڈری ڈسپلیز پر ڈیسک ٹاپ موڈ فورس کرنے کے لیے ریبوٹ درکار ہے۔"</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"ابھی ریبوٹ کریں"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"بعد میں ریبوٹ کریں"</string>
+    <!-- no translation found for bluetooth_details_spatial_audio_title (6183752635162309599) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_spatial_audio_summary (4125762902654875180) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_head_tracking_title (8021583493584244700) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_head_tracking_summary (2093665685644696866) -->
+    <skip />
 </resources>
