--- a/res/values-zh-rHK/strings.xml
+++ b/res/values-zh-rHK/strings.xml
@@ -214,10 +214,8 @@
     <string name="app_locale_picker_title" msgid="8423365003726200684">"應用程式語言"</string>
     <string name="suggested_app_locales_title" msgid="8898358282377369405">"建議的語言"</string>
     <string name="all_supported_app_locales_title" msgid="5479289964316009026">"所有語言"</string>
-    <!-- no translation found for preference_of_system_locale_title (8067226276038751504) -->
-    <skip />
-    <!-- no translation found for preference_of_system_locale_summary (7828965109093154187) -->
-    <skip />
+    <string name="preference_of_system_locale_title" msgid="8067226276038751504">"系統語言"</string>
+    <string name="preference_of_system_locale_summary" msgid="7828965109093154187">"系統預設 - <xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g>"</string>
     <string name="no_multiple_language_supported" msgid="1683023807955740826">"此應用程式的預設語言為<xliff:g id="DEFAULT_LANGUAGE">%1$s</xliff:g>，不支援其他語言。"</string>
     <plurals name="dlg_remove_locales_title" formatted="false" msgid="2845515796732609837">
       <item quantity="other">要移除選取的語言嗎？</item>
@@ -2306,10 +2304,8 @@
     <string name="accessibility_screen_magnification_navbar_title" msgid="480853328665484528">"使用快速鍵來放大"</string>
     <string name="accessibility_screen_magnification_state_navbar_gesture" msgid="8067042663897802231">"使用快速鍵和輕按三下來放大"</string>
     <string name="accessibility_introduction_title" msgid="8834950581512452348">"關於「<xliff:g id="SERVICE">%1$s</xliff:g>」"</string>
-    <!-- no translation found for accessibility_text_reading_options_title (3224648909213325563) -->
-    <skip />
-    <!-- no translation found for accessibility_text_reading_options_suggestion_title (2492155642665312733) -->
-    <skip />
+    <string name="accessibility_text_reading_options_title" msgid="3224648909213325563">"螢幕大小同文字"</string>
+    <string name="accessibility_text_reading_options_suggestion_title" msgid="2492155642665312733">"改變文字嘅顯示方式"</string>
     <string name="accessibility_text_reading_preview_mail_subject" msgid="8410011779056611430">"電郵：時光機計劃第 2 版"</string>
     <string name="accessibility_text_reading_preview_mail_from" msgid="8008010238385973504">"寄件者：bill@email.com"</string>
     <string name="accessibility_text_reading_preview_mail_content" msgid="2845972588748160509">"早晨！根據番上次嘅對話內容，我想瞭解一下你嘅時光機開發計劃最新進度。你趕唔趕得切喺今年嘅 E3 電玩展上面展出設計原型？"</string>
@@ -2318,10 +2314,8 @@
     <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"放大螢幕"</string>
     <string name="accessibility_screen_magnification_short_summary" msgid="2207048420669939150">"輕按 3 次即可縮放畫面"</string>
     <string name="accessibility_screen_magnification_navbar_short_summary" msgid="4885018322430052037">"輕按按鈕即可縮放"</string>
-    <!-- no translation found for accessibility_screen_magnification_intro_text (3856180549393526339) -->
-    <skip />
-    <!-- no translation found for accessibility_screen_magnification_summary (8267672508057326959) -->
-    <skip />
+    <string name="accessibility_screen_magnification_intro_text" msgid="3856180549393526339">"可以快速放大螢幕畫面入面嘅內容"</string>
+    <string name="accessibility_screen_magnification_summary" msgid="8267672508057326959">"&lt;b&gt;跟住以下步驟就可以放大螢幕畫面：&lt;/b&gt;&lt;br/&gt; {0,number,integer}. 用快速鍵啟用放大功能&lt;br/&gt; {1,number,integer}. 㩒一下螢幕&lt;br/&gt; {2,number,integer}. 用 2 隻手指拖住畫面就可以四圍郁&lt;br/&gt; {3,number,integer}. 用 2 隻手指縮放就可以調整縮放程度&lt;br/&gt; {4,number,integer}. 用快速鍵就可以停用放大功能&lt;br/&gt;&lt;br/&gt;&lt;b&gt;如果要暫時放大螢幕畫面，請跟住以下步驟操作：&lt;/b&gt;&lt;br/&gt; {0,number,integer}. 確保放大類型設定咗做全螢幕&lt;br/&gt; {1,number,integer}. 用快速鍵啟用放大功能&lt;br/&gt; {2,number,integer}. 㩒住畫面上面任何地方&lt;br/&gt; {3,number,integer}. 用 2 隻手指拖住畫面就可以四圍郁&lt;br/&gt; {4,number,integer}. 提起手指就可以停止放大螢幕畫面"</string>
     <string name="accessibility_screen_magnification_navbar_summary" msgid="807985499898802296">"開啟放大功能後，您可放大畫面。\n\n"<b>"如要縮放"</b>"，請開啟放大功能，然後輕按螢幕任何地方。\n"<ul><li>"用 2 隻或多隻手指拖曳，即可捲動螢幕"</li>\n<li>"用 2 隻或多隻手指縮放，即可調整縮放程度"</li></ul>\n\n<b>"如要暫時縮放"</b>"，請開啟放大功能，再按住螢幕任何地方。\n"<ul><li>"拖曳即可在螢幕上移動"</li>\n<li>"提起手指即可縮小至原大"</li></ul>\n\n"您無法在鍵盤或導覽列上使用放大功能。"</string>
     <string name="accessibility_tutorial_pager" msgid="8461939455728454061">"<xliff:g id="NUM_PAGES">%2$d</xliff:g> 頁中嘅第 <xliff:g id="CURRENT_PAGE">%1$d</xliff:g> 頁"</string>
     <string name="accessibility_tutorial_dialog_title_button" msgid="4681164949716215131">"使用無障礙功能按鈕開啟"</string>
@@ -2366,17 +2360,14 @@
     <string name="accessibility_shortcut_description" msgid="2184693606202133549">"允許在上鎖畫面開啟功能捷徑。同時按住兩個音量鍵幾秒。"</string>
     <string name="accessibility_button_title" msgid="5251235485581552614">"無障礙功能按鈕"</string>
     <string name="accessibility_button_gesture_title" msgid="3573456209050374139">"無障礙工具按鈕和手勢"</string>
-    <!-- no translation found for accessibility_button_intro_text (80993874471745687) -->
-    <skip />
+    <string name="accessibility_button_intro_text" msgid="80993874471745687">"任何畫面上都能快速使用無障礙功能"</string>
     <string name="accessibility_button_about_title" msgid="3581116105084067926">"關於無障礙功能按鈕"</string>
     <string name="accessibility_button_gesture_about_title" msgid="8468987303602865536">"關於無障礙功能按鈕同手勢"</string>
     <string name="accessibility_button_gesture_footer_learn_more_content_description" msgid="4144803517680297869">"進一步了解無障礙功能按鈕同手勢"</string>
     <string name="accessibility_button_intro" msgid="2601976470525277903">"請使用無障礙功能按鈕。手勢無法與三按鈕導覽配搭使用。"</string>
     <string name="accessibility_button_summary" msgid="8510939012631455831">"快速使用無障礙功能"</string>
-    <!-- no translation found for accessibility_button_gesture_description (5087102396258564057) -->
-    <skip />
-    <!-- no translation found for accessibility_button_description (9171447568163715949) -->
-    <skip />
+    <string name="accessibility_button_gesture_description" msgid="5087102396258564057"><b>"如何使用按鈕或手勢"</b>\n\n"1. 前往無障礙設定\n2. 選取功能並輕按捷徑\n3. 如要使用該功能，請輕按無障礙功能按鈕或手勢"</string>
+    <string name="accessibility_button_description" msgid="9171447568163715949"><b>"如何使用按鈕"</b>\n\n"1. 前往無障礙設定\n2. 選取功能並輕按捷徑\n3. 如要使用該功能，請輕按無障礙功能按鈕"</string>
     <string name="accessibility_button_or_gesture_title" msgid="3510075963401163529">"使用按鈕或手勢"</string>
     <string name="accessibility_button_location_title" msgid="7182107846092304942">"位置"</string>
     <string name="accessibility_button_size_title" msgid="5785110470538960881">"大小"</string>
@@ -2386,8 +2377,7 @@
     <string name="accessibility_button_low_label" msgid="4193015407828927741">"透明"</string>
     <string name="accessibility_button_high_label" msgid="9138077512008190896">"不透明"</string>
     <string name="accessibility_toggle_high_text_contrast_preference_title" msgid="1830189632458752698">"高對比文字"</string>
-    <!-- no translation found for accessibility_toggle_high_text_contrast_preference_summary (5286411556836346180) -->
-    <skip />
+    <string name="accessibility_toggle_high_text_contrast_preference_summary" msgid="5286411556836346180">"將文字顏色改成黑色或者白色，盡量令文字同背景顏色有最大對比。"</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_title" msgid="4987009529235165664">"自動更新螢幕放大設定"</string>
     <string name="accessibility_toggle_screen_magnification_auto_update_preference_summary" msgid="9034532513972547720">"在應用程式轉場時更新螢幕放大設定"</string>
     <string name="accessibility_power_button_ends_call_prerefence_title" msgid="8187306131979612144">"按開關按鈕結束通話"</string>
@@ -2407,27 +2397,20 @@
     <string name="accessibility_control_timeout_about_title" msgid="813588002683460837">"關於操作執行時間 (無障礙功能逾時)"</string>
     <string name="accessibility_control_timeout_footer_learn_more_content_description" msgid="8118584413220542193">"進一步了解操作執行時間 (無障礙功能逾時)"</string>
     <string name="accessibility_control_timeout_preference_title" msgid="1443940538597464758">"處理時間"</string>
-    <!-- no translation found for accessibility_control_timeout_preference_summary (4037051091059316310) -->
-    <skip />
-    <!-- no translation found for accessibility_control_timeout_preference_intro_text (1398116710556762245) -->
-    <skip />
+    <string name="accessibility_control_timeout_preference_summary" msgid="4037051091059316310">"唔係所有應用程式都支援呢個同時效有關嘅偏好設定"</string>
+    <string name="accessibility_control_timeout_preference_intro_text" msgid="1398116710556762245">"揀系統提示你執行操作嘅暫時訊息顯示時間"</string>
     <string name="accessibility_long_press_timeout_preference_title" msgid="5237764682976688855">"輕觸並按住延遲"</string>
     <string name="accessibility_display_inversion_preference_title" msgid="5476133104746207952">"色彩反轉"</string>
     <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"使用色彩反轉"</string>
     <string name="accessibility_display_inversion_shortcut_title" msgid="6889624526691513462">"色彩反轉捷徑"</string>
-    <!-- no translation found for accessibility_display_inversion_preference_intro_text (1159663288481145318) -->
-    <skip />
-    <!-- no translation found for accessibility_display_inversion_preference_subtitle (4494767676482389509) -->
-    <skip />
+    <string name="accessibility_display_inversion_preference_intro_text" msgid="1159663288481145318">"色彩反轉可以將光嘅螢幕畫面轉暗，深色部分轉成淺色。"</string>
+    <string name="accessibility_display_inversion_preference_subtitle" msgid="4494767676482389509">"&lt;b&gt;注意事項&lt;/b&gt;&lt;br/&gt; &lt;ol&gt; &lt;li&gt; 媒體同圖片嘅色彩將會有變&lt;/li&gt; &lt;li&gt; 所有應用程式都會色彩反轉&lt;/li&gt; &lt;li&gt; 你可以改用深色主題背景顯示深色背景&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"自動點擊 (停留時間)"</string>
     <string name="accessibility_autoclick_about_title" msgid="152923024405552594">"關於自動點擊 (停留時間)"</string>
     <string name="accessibility_autoclick_footer_learn_more_content_description" msgid="7056189627042350691">"進一步了解自動點擊 (停留時間)"</string>
-    <!-- no translation found for accessibility_autoclick_intro_text (8959680635470639347) -->
-    <skip />
-    <!-- no translation found for accessibility_autoclick_description (6695732131412361101) -->
-    <skip />
-    <!-- no translation found for accessibility_autoclick_default_title (2024730028293793490) -->
-    <skip />
+    <string name="accessibility_autoclick_intro_text" msgid="8959680635470639347">"您可透過設定，讓已連接的滑鼠在游標停止移動一段時間後自動點擊"</string>
+    <string name="accessibility_autoclick_description" msgid="6695732131412361101">"如果使用者不方便按滑鼠按鈕，自動點擊功能將可提供協助"</string>
+    <string name="accessibility_autoclick_default_title" msgid="2024730028293793490">"關閉自動點擊"</string>
     <string name="accessibility_autoclick_short_title" msgid="7938302504358912984">"短"</string>
     <string name="accessibility_autoclick_short_summary" msgid="4106953930081213514">"0.2 秒"</string>
     <string name="accessibility_autoclick_medium_title" msgid="3134175117576834320">"中"</string>
@@ -2452,15 +2435,11 @@
     <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"輕觸反應"</string>
     <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"使用「<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>」"</string>
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"開 <xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>"</string>
-    <!-- no translation found for accessibility_service_auto_added_qs_tooltips_content (4928746290220689428) -->
-    <skip />
-    <!-- no translation found for accessibility_service_qs_tooltips_content (3900536971101946314) -->
-    <skip />
+    <string name="accessibility_service_auto_added_qs_tooltips_content" msgid="4928746290220689428">"「<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>」已新增至「快速設定」。向下滑動即可隨時開啟或關閉。"</string>
+    <string name="accessibility_service_qs_tooltips_content" msgid="3900536971101946314">"您可以編輯快速設定，將捷徑新增至「<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g>」"</string>
     <string name="accessibility_quick_settings_tooltips_dismiss" msgid="1684723414081728584">"閂"</string>
-    <!-- no translation found for accessibility_daltonizer_about_intro_text (3636710237139542212) -->
-    <skip />
-    <!-- no translation found for accessibility_daltonizer_about_intro_text (3702653229533336133) -->
-    <skip />
+    <string name="accessibility_daltonizer_about_intro_text" product="default" msgid="3636710237139542212">"調整手機上的顏色顯示效果"</string>
+    <string name="accessibility_daltonizer_about_intro_text" product="tablet" msgid="3702653229533336133">"調整平板電腦上的顏色顯示效果"</string>
     <string name="accessibility_daltonizer_primary_switch_title" msgid="32064721588910540">"使用色彩校正"</string>
     <string name="accessibility_daltonizer_shortcut_title" msgid="7480360363995502369">"色彩校正捷徑"</string>
     <string name="accessibility_daltonizer_about_title" msgid="6063650804116981287">"關於色彩校正"</string>
@@ -2472,10 +2451,8 @@
     <string name="captioning_caption_appearance_title" msgid="4501313548541670063">"字幕大小和樣式"</string>
     <string name="captioning_caption_appearance_summary" msgid="7340741178479381312">"<xliff:g id="ACCESSIBILITY_FONT_SIZE">%1$s</xliff:g>文字尺寸"</string>
     <string name="captioning_more_options_title" msgid="3484496882942539652">"更多選項"</string>
-    <!-- no translation found for accessibility_caption_preference_intro (6662649135457507767) -->
-    <skip />
-    <!-- no translation found for accessibility_caption_preference_summary (632875702223135121) -->
-    <skip />
+    <string name="accessibility_caption_preference_intro" msgid="6662649135457507767">"自訂字幕大小及樣式，以便閱讀"</string>
+    <string name="accessibility_caption_preference_summary" msgid="632875702223135121">"並非所有媒體應用程式都支援這些字幕偏好設定"</string>
     <string name="accessibility_shortcut_type_software" msgid="2552732582767687515">"無障礙功能按鈕"</string>
     <string name="accessibility_shortcut_type_software_gesture" msgid="5608959693931019059">"兩指從底部向上輕掃"</string>
     <string name="accessibility_shortcut_type_hardware" msgid="4834144210432451916">"按住音量鍵"</string>
@@ -2503,14 +2480,11 @@
     <string name="accessibility_shortcuts_settings_title" msgid="974740249671825145">"無障礙功能捷徑"</string>
     <string name="enable_quick_setting" msgid="6648073323202243604">"在「快速設定」中顯示"</string>
     <string name="daltonizer_mode_deuteranomaly_title" msgid="4210949400493358650">"紅綠不分"</string>
-    <!-- no translation found for daltonizer_mode_protanomaly_title (6392456967103014723) -->
-    <skip />
+    <string name="daltonizer_mode_protanomaly_title" msgid="6392456967103014723">"紅綠色盲"</string>
     <string name="daltonizer_mode_tritanomaly_title" msgid="2278786218762602022">"藍黃不分"</string>
     <string name="daltonizer_mode_grayscale_title" msgid="152005391387952588">"灰階螢幕"</string>
-    <!-- no translation found for daltonizer_mode_deuteranomaly_summary (2117727423019598455) -->
-    <skip />
-    <!-- no translation found for daltonizer_mode_protanomaly_summary (4617032854982040748) -->
-    <skip />
+    <string name="daltonizer_mode_deuteranomaly_summary" msgid="2117727423019598455">"綠色弱、綠色盲"</string>
+    <string name="daltonizer_mode_protanomaly_summary" msgid="4617032854982040748">"紅色弱、紅色盲"</string>
     <string name="daltonizer_mode_tritanomaly_summary" msgid="2428218320118180070">"藍色弱視"</string>
     <string name="reduce_bright_colors_preference_title" msgid="2249314004651574997">"超暗"</string>
     <string name="reduce_bright_colors_switch_title" msgid="1751678397884065312">"使用超暗螢幕"</string>
@@ -2518,12 +2492,9 @@
     <string name="reduce_bright_colors_about_title" msgid="503655452544934393">"關於超暗功能"</string>
     <string name="reduce_bright_colors_preference_summary" product="default" msgid="7878756844769221647">"將螢幕調至比手機最低亮度更暗"</string>
     <string name="reduce_bright_colors_preference_summary" product="tablet" msgid="8959794720356934888">"將螢幕調至比平板電腦最低亮度更暗"</string>
-    <!-- no translation found for reduce_bright_colors_preference_intro_text (3502290826747650566) -->
-    <skip />
-    <!-- no translation found for reduce_bright_colors_preference_subtitle (8573408446901659333) -->
-    <skip />
-    <!-- no translation found for reduce_bright_colors_preference_subtitle (5158211121482010799) -->
-    <skip />
+    <string name="reduce_bright_colors_preference_intro_text" msgid="3502290826747650566">"將螢幕調暗可讓您閱讀時更舒適。"</string>
+    <string name="reduce_bright_colors_preference_subtitle" product="default" msgid="8573408446901659333">"「超暗」功能適用於以下情況：&lt;ol&gt; &lt;li&gt; 手機預設的最低亮度仍然太光&lt;/li&gt; &lt;li&gt; 在夜間或睡前黑暗的房間等昏暗環境下使用手機&lt;/li&gt; &lt;/ol&gt;"</string>
+    <string name="reduce_bright_colors_preference_subtitle" product="tablet" msgid="5158211121482010799">"「超暗」功能適用於以下情況：&lt;ol&gt; &lt;li&gt; 平板電腦預設的最低亮度仍然太光&lt;/li&gt; &lt;li&gt; 在夜間或睡前黑暗的房間等昏暗環境下使用平板電腦&lt;/li&gt; &lt;/ol&gt;"</string>
     <string name="reduce_bright_colors_intensity_preference_title" msgid="7455443033955118267">"亮度"</string>
     <string name="reduce_bright_colors_intensity_start_label" msgid="930387498396426039">"減少亮度"</string>
     <string name="reduce_bright_colors_intensity_end_label" msgid="1422600205484299860">"增加亮度"</string>
@@ -5437,7 +5408,8 @@
     <string name="power_menu_long_press_for_assist_sensitivity_low_label" msgid="3430099983480845635">"短"</string>
     <string name="power_menu_long_press_for_assist_sensitivity_high_label" msgid="2059686170350829156">"長"</string>
     <string name="lockscreen_privacy_wallet_setting_toggle" msgid="4188327143734192000">"顯示電子錢包"</string>
-    <string name="lockscreen_privacy_wallet_summary" msgid="5388868513484652431">"允許在上鎖畫面和快速設定使用電子錢包"</string>
+    <!-- no translation found for lockscreen_privacy_wallet_summary (3984851951621168573) -->
+    <skip />
     <string name="lockscreen_privacy_qr_code_scanner_setting_toggle" msgid="4284186474146767523">"顯示 QR 碼掃瞄器"</string>
     <string name="lockscreen_privacy_qr_code_scanner_summary" msgid="6152471629901191089">"允許在上鎖畫面存取 QR 碼掃瞄器"</string>
     <string name="lockscreen_privacy_controls_setting_toggle" msgid="7445725343949588613">"顯示裝置控制"</string>
@@ -5635,14 +5607,10 @@
     <item msgid="588427840913221601">"處理狀態"</item>
   </string-array>
     <string name="tare_dialog_confirm_button_title" msgid="9179397559760203348">"確認"</string>
-    <!-- no translation found for dream_preview_button_title (6637456541851795952) -->
-    <skip />
-    <!-- no translation found for dream_picker_category (7726447836872744867) -->
-    <skip />
-    <!-- no translation found for dream_complications_toggle_title (4273232303027449163) -->
-    <skip />
-    <!-- no translation found for dream_complications_toggle_summary (8288590233196337078) -->
-    <skip />
+    <string name="dream_preview_button_title" msgid="6637456541851795952">"預覽"</string>
+    <string name="dream_picker_category" msgid="7726447836872744867">"選擇螢幕保護程式"</string>
+    <string name="dream_complications_toggle_title" msgid="4273232303027449163">"顯示其他資訊"</string>
+    <string name="dream_complications_toggle_summary" msgid="8288590233196337078">"在螢幕保護程式上顯示時間、日期和天氣"</string>
     <string name="dream_more_settings_category" msgid="3119192146760773748">"更多設定"</string>
     <string name="dream_setup_title" msgid="6356243920317789584">"自訂螢幕保護程式"</string>
     <string name="dream_setup_description" msgid="8881397422185278075">"選擇不使用裝置時螢幕上顯示的內容。"</string>
@@ -5651,4 +5619,12 @@
     <string name="reboot_dialog_force_desktop_mode" msgid="2021839270403432948">"您需要重新開機，才能在次要螢幕上強制執行桌面模式。"</string>
     <string name="reboot_dialog_reboot_now" msgid="235616015988522355">"立即重新開機"</string>
     <string name="reboot_dialog_reboot_later" msgid="4261717094186904568">"稍後重新開機"</string>
+    <!-- no translation found for bluetooth_details_spatial_audio_title (6183752635162309599) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_spatial_audio_summary (4125762902654875180) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_head_tracking_title (8021583493584244700) -->
+    <skip />
+    <!-- no translation found for bluetooth_details_head_tracking_summary (2093665685644696866) -->
+    <skip />
 </resources>
